# Compiler-Project

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: factorial.fru  test.471
src/: assignment_conversion.py  cellulose.py  close_lambdas.py  constant_folding.py  convert_assign.py  convert_assignments.py  cps.py  desugar.py  eval.py  eval_lactose.py  eval_maltose.py  execute.py  explicate_control.py  fructose.lark  fructose.py  glucose.lark  glucose.py  hoist.py  kernel copy.py  kernel.lark  kernel.py  lactose.py  lift.py  lower.py  lower_cellulose.py  main.py  maltose.lark  maltose.py  monadic.py  opt.py  parse.py  parse_glucose.py  parse_kernel.py  parse_maltose.py  remove_complex_operands.py  simplify.py  store.py  sucrose.py  sugar.py  test.py  (+4 more)
tests/: test_assignment_conversion.py  test_close_lambdas.py  test_constant_folding.py  test_convert_assign.py  test_convert_assignments.py  test_desugar.py  test_eval.py  test_eval_lactose.py  test_eval_maltose.py  test_explicate_control.py  test_hoist.py  test_lower.py  test_minor_extensions.py  test_opt.py  test_parse.py  test_parse_glucose.py  test_parse_kernel.py  test_remove_complex_operands.py  test_simplify.py  test_type_inference.py  test_uniqify.py  test_value_numbering.py
