[project]
name = "471c"
version = "0.0.1"
dependencies = [
    "lark>=1.2.2",
 "llvmlite>=0.44.0",
 "pre-commit>=4.1.0",
]
requires-python = ">=3.13"

[tool.pyright]
"typeCheckingMode" = "strict"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--html=report.html",
    "--self-contained-html",
    "--cov-branch",
    "--cov-report=html",
    "--cov=src",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.4",
]
