[project]
name = "471c"
version = "0.0.1"
dependencies = ["lark>=1.2.2", "llvmlite>=0.44.0", "pre-commit>=4.1.0"]
requires-python = ">=3.13"

[tool.pyright]
"typeCheckingMode" = "strict"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--html=reports/tests/report.html",
    "--self-contained-html",
    "--junitxml=reports/tests/report.xml",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term",
    "--cov-report=html:reports/coverage/htmlcov",
    "--cov-report=xml:reports/coverage/coverage.xml",
]

[tool.coverage.run]
omit = ["src/store.py", "src/main.py"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.4",
]
